widget/assets/css/style.css
/* ... */
.layout3 .list-layout .list-item-media .list-media-holder img {
    max-width: 100%;
    max-height: 100%;
    vertical-align: middle;
    border-radius: 2px;
}

.layout3 .list-layout .list-item-media .list-media-holder .main-icon {
    font-size: 44px;
    position: relative;
    top: 8px;
}

.layout3 .list-layout .list-item {
    padding: 0;
    min-height: 71px;
    position: relative;
}

.layout3 .list-layout .list-item-copy {
    padding: 6px 10px 5px;
}

.holder .plugin-banner {
    position: relative;
    border-bottom: none !important;
}

/* Fixed Bottom */
.holder.has-bottom {
    padding-bottom: 38px !important;
}

.holder.has-bottom.has-extra-links {
    padding-bottom: 88px !important;
}

.holder .bottom.fixed-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index: 11;
    background: #09a3ee;
}

html[iOS="true"] .holder .bottom.fixed-bottom {
    padding-bottom: env(safe-area-inset-bottom) !important;
}

.holder .bottom.fixed-bottom.has-content {
    bottom: -240px;
}

.holder .bottom.fixed-bottom.has-content.open {
    bottom: 0;
}

.holder .bottom.fixed-bottom .hidden-content {
    height: 240px;
    overflow-y: auto;
    overflow-x: hidden;
    background: #fff;
}

.holder .bottom.fixed-bottom .hidden-content .content {
    display: none;
}

.holder .bottom.fixed-bottom .hidden-content .content.active {
    display: block;
}

.holder .bottom.fixed-bottom .hidden-content .layout3 .list-layout .list-item,
.holder .bottom.fixed-bottom .hidden-content .layout3 .list-layout .list-item-copy {
    min-height: 40px;
}

.holder .bottom.fixed-bottom .hidden-content .layout3 .list-layout .list-item-media .remove-btn {
    padding: 16px 0;
}

.holder .bottom.fixed-bottom .hidden-content .form-holder {
    padding: 0 8px;
}

.holder .bottom.fixed-bottom .hidden-content textarea {
    max-height: 204px;
    height: 204px;
    resize: none;
}

.holder .bottom div {
    padding: 0;
}

.holder .bottom .padded {
    padding: 15px;
}

.holder .bottom div a {
    display: inline-block;
    width: 100%;
    height: 100%;
    padding: 8px;
    font-size: 13px;
    text-decoration: none;
}

.holder .bottom > .hidden-content {
    background: #fff;
}

.holder .bottom div a.active {
    font-weight: bold;
}

.holder .bottom .extra-links a {
    position: absolute;
    top: -45px;
    right: 10px;
    border-radius: 100%;
    font-size: 21px;
    padding: 7px;
    text-align: center;
    height: 35px;
    width: 35px;
    /*z-index:13;*/
    opacity: 0.5;
}

.holder .bottom .extra-links a.bookmarked {
    opacity: 1 !important;
}

.holder .bottom .extra-links a .icon {
    color: #09a3ee;
}

/* Custom */
.seminar-notes .list-item-copy p {
    line-height: 18px;
}

.seminar-notes .list-item-copy p.small {
    font-size: 11px;
}

.seminar-notes .form-holder .form-control.border-none {
    height: 38px;
}

.seminar-notes .list-item-copy p span.selected {
    font-weight: 500;
}

.seminar-notes .list-item-copy .copy-holder {
    padding-right: 45px;
}

.seminar-notes .list-item-copy .bookmark-holder {
    position: absolute;
    top: 51%;
    right: 10px;
    transform: translateY(-50%);
}

.seminar-notes .list-item-copy .bookmark-holder span.icon {
    font-size: 20px;
    vertical-align: top;
}

.seminar-notes .form-holder .clear-icon {
    position: absolute;
    right: 10px;
    top: 10px;
    display: inline-block;
    width: 18px;
    height: 18px;
    border-radius: 100%;
    background: #ed4b4b;
	font-family:helvetica, arial !important;
}

.seminar-notes .form-holder .clear-icon:after {
    content: '+';
    color: #fff;
    position: absolute;
	top:-3px;
	left:4px;
    font-size: 19px;
	-ms-transform: rotate(45deg);
	-webkit-transform: rotate(45deg);
    transform: rotate(45deg);
}
html[browser="Firefox"] .seminar-notes .form-holder .clear-icon:after {
	top:-2px;
    left:3px;
}
html[browser="Netscape"] .seminar-notes .form-holder .clear-icon:after {
	left:3.5px;
}
html[os="Windows"][browser="Chrome"] .seminar-notes .form-holder .clear-icon:after {
	left:3px;
	top:-1px;
}
.seminar-notes .well p {
    font-size: 13px;
}

/* Item Layouts 4-5 */
.item-block {
    position: relative;
    padding: 1px !important;
}

.plugin-slide p.item-text {
    position: absolute;
    top: 50%;
    margin-top: -10px;
    left: 0;
    width: 100%;
    padding: 0 20px;
    font-size: 16px;
    line-height: 24px;
    color: #fff;
    z-index: 7;
    -webkit-transform: translate3d(0, 0, 0);
}

.item-block .text-holder {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 7;
    display: flex;
    align-items: center;
    justify-content: center;
    overflow: hidden;
}

.item-block .text-holder p.item-text {
    display: flex;
    align-self: center;
    color: #fff;
    padding: 15px;
    /*text-shadow:1px 1px 3px #111;*/
    margin: 0;
    -webkit-transform: translate3d(0, 0, 0);
}

.item-block img {
    height: auto;
    width: 100%;
}

.blackLayer {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 7;
    background: rgba(0, 0, 0, 0.35);
    -webkit-transform: translate3d(0, 0, 0);
}

.hasBackground .backgroundLayer {
    position: absolute;
    top: -9px;
    left: -7%;
    width: 112%;
    height: 112%;
    z-index: 4;
    background-size: cover !important;
    background-position: center center !important;
    -o-filter: blur(8px);
    -moz-filter: blur(8px);
    -webkit-filter: blur(8px);
    filter: blur(8px);
}

.hasBackground .plugin-slide {
    position: relative;
    overflow: hidden;
}

.hasBackground .plugin-slide img {
    position: relative;
    z-index: 6;
    width: 674px !important;
}

/* Items Layout 4-5 */
.plugin-slide {
    text-align: center;
}
/* ... */

